backstage/01-backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-backend
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage-backend
  template:
    metadata:
      labels:
        app: backstage-backend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: backstage-backend-sa
      containers:
        - name: backstage-backend
          image: ghcr.io/backstage-test-1/backstage-backend:c3590e957273aa6a3fe49a2aed24795cce162d85
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 7007
          volumeMounts:
            - name: app-config
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
              readOnly: true
      volumes:
        - name: app-config
          configMap:
            name: backstage-app-config
#          readinessProbe:
#            httpGet:
#              port: 7007
#              path: /healthcheck
#          livenessProbe:
#            httpGet:
#              port: 7007
#              path: /healthcheck
