backstage/04-backstage-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-frontend
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage-frontend
  template:
    metadata:
      labels:
        app: backstage-frontend
    spec:
      containers:
        - name: backstage-frontend
          image: ghcr.io/backstage-test-1/backstage-frontend:0d32075c269481e3bf7c24ff6ff6e7588128ae28
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
