backstage/02-backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  type: NodePort 
  selector:
    app: backstage-frontend
  ports:
    - name: http
      port: 80
      targetPort: http 
      nodePort: 30007
